# lsp-from-scratch

./: main.py  pyproject.toml
src/lsp_from_scratch/: coders.py
tests/lsp/: test_encoder.py
