[project]
name = "lsp-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "james walls", email = "35391305+jameswalls@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
